mysterious overflow bug

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -61,6 +61,7 @@ html {
     height: 100vh;
     margin: 0;
     padding: 0;
+    overflow-x: clip;
 }
 
 body {
